--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,10 @@
-    <!--https://realfavicongenerator.net/-->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>{{ page.title }}</title>
+<meta name="description" content="{{ page.description }}">
+
+<!--https://realfavicongenerator.net/-->
 <link rel="icon" type="image/png" href="../favicons/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="../favicons/favicon.svg" />
 <link rel="shortcut icon" href="../favicons/favicon.ico" />
@@ -9,9 +15,24 @@
 
 <meta property="og:title" content="{{ page.title }}">
 <meta property="og:description" content="{{ page.description | default: site.description }}">
-<meta property="og:image" content="{{ site.url }}/favicons/social-image.png">
+<meta property="og:image" content="{{ page.social_image | default: '/favicons/social-image.png' }}">
+
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="{{ page.title | default: site.title }}">
 <meta name="twitter:description" content="{{ page.description | default: site.description }}">
-<meta name="twitter:image" content="{{ page.twitter_image | default: site.url | append: '/favicons/social-image.png' }}">
+<meta property="og:image" content="{{ page.social_image | default: '/favicons/social-image.png' }}">
+
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+<script src="https://kit.fontawesome.com/1f28aba095.js" crossorigin="anonymous"></script>
+<script type="text/javascript" src="/js/dc.js"></script>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jua&family=Sue+Ellen+Francisco&family=Suez+One&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="/css/dc.css">
