--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,23 +5,22 @@
 <meta name="description" content="{{ page.description }}">
 
 <!--https://realfavicongenerator.net/-->
-<link rel="icon" type="image/png" href="../favicons/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="../favicons/favicon.svg" />
-<link rel="shortcut icon" href="../favicons/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="../favicons/apple-touch-icon.png" />
-<link rel="manifest" href="../favicons/site.webmanifest" />
-
+<link rel="icon" type="image/png" href="https://distractedcoder.com/favicons/favicons/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="https://distractedcoder.com/favicons/favicon.svg" />
+<link rel="shortcut icon" href="https://distractedcoder.com/favicons/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://distractedcoder.com/favicons/apple-touch-icon.png" />
+<link rel="manifest" href="https://distractedcoder.com/favicons/site.webmanifest" />
 <meta name="description" content="{{ page.description | default: site.description }}">
 
 <meta property="og:title" content="{{ page.title }}">
 <meta property="og:description" content="{{ page.description | default: site.description }}">
-<meta property="og:image" content="{{ page.social_image | default: '/favicons/social-image.png' }}">
+<meta property="og:image" content="{{ page.social_image | default: 'https://distractedcoder.com/favicons/social-image.png' }}">
 
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="{{ page.title | default: site.title }}">
 <meta name="twitter:description" content="{{ page.description | default: site.description }}">
-<meta property="twitter:image" content="{{ page.social_image | default: '/favicons/social-image.png' }}">
+<meta property="twitter:image" content="{{ page.social_image | default: 'https://distractedcoder.com/favicons/social-image.png' }}">
 
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
