--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,8 +21,8 @@
                                 <div class="footer-section-title"><b>Sitemap</b></div>
                                 <ul>
                                     <li><a href="../index.html">Home</a></li>
-                                    <li><a href="../about-us/index.html">About Us</a></li>
-                                    <li><a href="../slide-soldiers/index.html">Slide Soldiers</a></li>
+                                    <li><a href="../about-us/">About Us</a></li>
+                                    <li><a href="../slide-soldiers/">Slide Soldiers</a></li>
                                 </ul>
                                 <div class="footer-divider"></div>
                             </div>
