about us page updated

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="">
             <span class="nav-left">
-                <a href="../index.html">
+                <a href="../">
                     <div class="nav-item"><img src="../img/dc-logo.png" alt="Distracted Coder" class="dc-logo">
                         <span class="dc-logo-font">Distracted Coder</span>
                     </div>
