--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
                                 <div class="footer-divider"></div>
                                 <div class="footer-section-title"><b>Sitemap</b></div>
                                 <ul>
-                                    <li><a href="../index.html">Home</a></li>
+                                    <li><a href="../">Home</a></li>
                                     <li><a href="../about-us/">About Us</a></li>
                                     <li><a href="../slide-soldiers/">Slide Soldiers</a></li>
                                 </ul>
