--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,11 +8,11 @@
                     <div class="row justify-content-around">
                         <div class="col col-12 col-md-3 footer-logo-section">
                             <div class="footer-section text-center">
-                                <!-- <img src="../img/dc-logo.png" alt="Distracted Coder LLC" class="footer-dc-logo"> -->
+                                <!-- <img src="img/dc-logo.png" alt="Distracted Coder LLC" class="footer-dc-logo"> -->
                                 <span class="footer-dc-logo-font font-header">Distracted Coder, LLC</span>
                             </div>
                             <div class="footer-jester-wrapper d-none d-md-block mx-auto text-center">
-                                <img src="../img/jester-smug.gif" alt="jester" class="footer-jester">
+                                <img src="/img/jester-smug.gif" alt="jester" class="footer-jester">
                             </div>
                         </div>
                         <div class="col col-6 col-md-3">
@@ -20,9 +20,9 @@
                                 <div class="footer-divider"></div>
                                 <div class="footer-section-title"><b>Sitemap</b></div>
                                 <ul>
-                                    <li><a href="../">Home</a></li>
-                                    <li><a href="../about-us/">About Us</a></li>
-                                    <li><a href="../slide-soldiers/">Slide Soldiers</a></li>
+                                    <li><a href="/">Home</a></li>
+                                    <li><a href="/about-us/">About Us</a></li>
+                                    <li><a href="/slide-soldiers/">Slide Soldiers</a></li>
                                 </ul>
                                 <div class="footer-divider"></div>
                             </div>
