--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <nav class="">
             <span class="nav-left">
-                <a href="../">
-                    <div class="nav-item"><img src="../img/dc-logo.png" alt="Distracted Coder" class="dc-logo">
+                <a href="/">
+                    <div class="nav-item"><img src="/img/dc-logo.png" alt="Distracted Coder" class="dc-logo">
                         <span class="dc-logo-font">Distracted Coder</span>
                     </div>
                 </a>
@@ -10,10 +10,10 @@
 
             <!--<a href="#" class="active-nav-breadcrumb">-->
             <span class="nav-right text-center">
-                <a href="../slide-soldiers/">
+                <a href="/slide-soldiers/">
                     <div class="nav-item font-handwritten nav-icon nav-bg"><i class="fa-brands fa-steam"></i><span class="nav-label">Slide Soldiers</span></div>
                 </a>
-                <a href="../about-us/">
+                <a href="/about-us/">
                     <div class="nav-item font-handwritten nav-icon nav-bg"><i class="fa-solid fa-user"></i><span class="nav-label">About us</span></div>
                 </a>
                 <a href="https://www.youtube.com/@DistractedCoder" target="_blank">
