--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,6 +32,6 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jua&family=Sue+Ellen+Francisco&family=Suez+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Jua&family=Sue+Ellen+Francisco&family=Suez+One&family=Sono:wght,MONO@600,1&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="/css/dc.css">
