--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,8 +19,11 @@
                 <a href="https://www.youtube.com/@DistractedCoder" target="_blank">
                     <div class="nav-item font-handwritten nav-icon nav-bg"><i class="fa-brands fa-youtube"></i><span class="nav-label">Videos</span></div>
                 </a>
-                <a href="https://distractedcoder.itch.io/" target="_blank">
-                    <div class="nav-item font-handwritten nav-icon nav-bg"><i class="fa-brands fa-itch-io"></i><span class="nav-label">Games</span></div>
+                <a href="/games/">
+                    <div class="nav-item font-handwritten nav-icon nav-bg">
+                        <!-- https://www.svgrepo.com/svg/327281/game-controller -->
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" preserveAspectRatio="xMinYMin" class="custom-fa-icon">{% include game-controller-icon-path-data.html %}</svg>
+                        <span class="nav-label">Games</span></div>
                 </a>
             </span>
         </nav>
