--- a/css/dc.css
+++ b/css/dc.css
@@ -45,9 +45,15 @@
 
 }
 
-html, body {
-  min-height: 100vh;
+html,
+body {
+    min-height: 100vh;
 }
+
+body {
+        overflow-x: hidden;
+}
+
 
 .suez-one-regular {
     font-family: "Suez One", serif;
@@ -68,11 +74,11 @@ html, body {
 }
 
 .sono-mono-600 {
-  font-family: "Sono", monospace;
-  font-optical-sizing: auto;
-  font-weight: 600;
-  font-style: normal;
-  font-variation-settings: "MONO" 1;
+    font-family: "Sono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-variation-settings: "MONO" 1;
 }
 
 
@@ -89,7 +95,8 @@ h6,
 .h4,
 .h5,
 .h6,
-nav, .font-header {
+nav,
+.font-header {
     font-family: "Suez One", serif;
 }
 
@@ -103,8 +110,7 @@ body {
     font-size: 1.5rem;
 }
 
-.font-monospace
-{
+.font-monospace {
     font-family: "Sono", monospace !important;
     font-optical-sizing: auto;
     font-variation-settings: "MONO" 1;
@@ -187,78 +193,80 @@ body {
     padding-right: calc(var(--spacer) * 5.5);
 }
 
-/* =================================================== buttons */
+/* ===================================================================================== buttons */
 
 .btn-fancy-offset {
-  position: relative;
-  padding: 16px;
-  color: var(--almost-white) !important;
-  -webkit-transition: padding 0.3s ease-in-out;
-  transition: padding 0.3s ease-in-out;
-  z-index: 2;
-  text-decoration: none;
-  margin: 6px;
+    position: relative;
+    padding: 16px;
+    color: var(--almost-white) !important;
+    -webkit-transition: padding 0.3s ease-in-out;
+    transition: padding 0.3s ease-in-out;
+    z-index: 2;
+    text-decoration: none;
+    margin: 6px;
 }
 
 /* this is the background */
 .btn-fancy-offset:before {
-  content: "";
-  position: absolute;
-  top: 0.6rem;
-  left: 0.6rem;
-  z-index: 1;
-  height: 100%;
-  width: 100%;
-  background-color: var(--border-color-blue);
-  border-bottom: 3px solid var(--almost-white);
-  border-right: 3px solid var(--almost-white);
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 9px;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    background-color: var(--border-color-blue);
+    /* border-bottom: 3px solid var(--almost-white);
+    border-right: 3px solid var(--almost-white); */
+    border: 3px solid rgb(24, 24, 181);
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 /* this is the border */
-.btn-fancy-offset:after { 
-  content: "";
-  position: absolute;
-  top: -0.25rem;
-  left: 0;
-  z-index: 2;
-  height: 100%;
-  width: 100%;
-  border: 3px solid rgb(24, 24, 181);
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+.btn-fancy-offset:after {
+    content: "";
+    position: absolute;
+    top: -6px;
+    left: 0;
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+    border: 3px solid rgb(24, 24, 181);
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
-.btn-fancy-offset:hover {
-  text-decoration: underline;
-}
 
-.btn-fancy-offset:hover:before, .btn-fancy-offset:hover:after {
-  top: 0;
-  left: 0;
-}
-
-.btn-fancy-offset-text{ 
+.btn-fancy-offset-text {
     z-index: 5;
     position: relative;
 }
 
+.btn-fancy-offset::after, .btn-fancy-offset::before {
+    border-radius: 0.375rem;
+}
+
+.btn-fancy-offset-rounded::after, .btn-fancy-offset-rounded::before {
+    border-radius: 999px;
+}
+
 
 .btn-fancy-offset-alt {
-  color: var(--pen-color) !important;
+    color: var(--pen-color) !important;
 }
 
 /* this is the background */
 .btn-fancy-offset-alt:before {
-  background-color: #cccccc;
-  border-bottom: 3px solid var(--almost-white);
-  border-right: 3px solid var(--almost-white);
+    background-color: #cccccc;
+    /* border-bottom: 3px solid var(--almost-white);
+    border-right: 3px solid var(--almost-white); */
+    border: 3px solid rgb(123, 123, 123);
 }
 
 /* this is the border */
-.btn-fancy-offset-alt:after { 
-  border: 3px solid rgb(123, 123, 123);
+.btn-fancy-offset-alt:after {
+    border: 3px solid rgb(123, 123, 123);
 }
 
 
@@ -266,56 +274,51 @@ body {
     background-color: var(--border-color-blue);
 }
 
-.btn-secondary{
+/* .btn-secondary {
     background-color: var(--almost-white);
     color: var(--pen-color);
     border: 4px solid var(--border-color-blue);
-}
-
-.btn-secondary:hover{
-    background-color: var(--border-color-blue);
-    color: var(--almost-white);
-    border: 4px solid var(--border-color-blue);
-}
-
-/*==============================================================================================temp*/
-
-
-/* @media (max-width: 576px) {
-    nav {
-        background-color: red
-    }
-}
-
-@media (min-width: 576px) {
-    nav {
-        background-color: rgb(255, 136, 0)
-    }
-}
-
-@media (min-width: 768px) {
-    nav {
-        background-color: rgb(242, 255, 0)
-    }
-}
-
-@media (min-width: 992px) {
-    nav {
-        background-color: rgb(0, 247, 255)
-    }
-}
-
-@media (min-width: 1200px) {
-    nav {
-        background-color: rgb(94, 255, 0)
-    }
-}
-
-@media (min-width: 1400px) {
-    nav {
-        background-color: rgb(0, 76, 255)
-    }
 } */
+
+
+
+
+/*larger than medium*/
+@media (min-width: 768px) {
+    .btn-fancy-offset:hover {
+        text-decoration: underline;
+    }
+
+    .btn-fancy-offset:hover:before,
+    .btn-fancy-offset:hover:after {
+        top: 0;
+        left: 0;
+    }
+
+    /* .btn-secondary:hover {
+        background-color: var(--border-color-blue);
+        color: var(--almost-white);
+        border: 4px solid var(--border-color-blue);
+    } */
+}
+
+/*smaller than medium*/
+@media (max-width: 767.98px) {
+
+    /* this is the border */
+    .btn-fancy-offset:after {
+    top: -3px;
+}
+
+/* this is the background */
+.btn-fancy-offset:before {
+    top: 3px;
+    left: 6px;
+    background-color: var(--border-color-blue);
+    border: 3px solid rgb(24, 24, 181);
+}
+
+}
 
 /*==============================================================================================nav*/
 nav {
@@ -335,7 +338,7 @@ nav {
     margin-right: 15px;
 }
 
-.dc-logo-font{
+.dc-logo-font {
     font-size: 1.75rem;
 }
 
@@ -408,10 +411,11 @@ nav {
     flex: 1 1 0;
 }
 
-.nav-right .nav-item:hover .nav-label, .active-nav-breadcrumb .nav-label {
-        text-decoration: underline;
-  text-decoration-thickness: 3px;
-  text-underline-offset: 0.2em;
+.nav-right .nav-item:hover .nav-label,
+.active-nav-breadcrumb .nav-label {
+    text-decoration: underline;
+    text-decoration-thickness: 3px;
+    text-underline-offset: 0.2em;
 }
 
 /*larger than medium*/
@@ -445,12 +449,12 @@ nav {
 }
 
 .nav-right a:hover .nav-bg {
-  background-color: var(--cycle-bg-color);
+    background-color: var(--cycle-bg-color);
 }
 
 .nav-right a:hover .nav-label,
 .nav-right a.active-nav-breadcrumb .nav-label {
-  text-decoration-color: var(--cycle-color) !important;
+    text-decoration-color: var(--cycle-color) !important;
 }
 
 
@@ -462,10 +466,10 @@ nav {
 .footer-section li:nth-child(5n+1) a:hover,
 .social-grid .footer-social-icon:nth-child(5n + 1):hover,
 #favorite-container .col-12:nth-child(5n + 1) .card,
-#dc-dashboard  .col-12:nth-child(5n + 1) .card {
-  --cycle-color: var(--solid-orange-color);
-  --cycle-bg-color: var(--bg-orange-color);
-  --cycle-bg-color-noalpha: var(--bg-orange-color-noalpha);
+#dc-dashboard .col-12:nth-child(5n + 1) .card {
+    --cycle-color: var(--solid-orange-color);
+    --cycle-bg-color: var(--bg-orange-color);
+    --cycle-bg-color-noalpha: var(--bg-orange-color-noalpha);
 }
 
 .nav-right a:nth-child(5n + 2):hover .nav-label,
@@ -474,10 +478,10 @@ nav {
 .footer-section li:nth-child(5n+2) a:hover,
 .social-grid .footer-social-icon:nth-child(5n + 2):hover,
 #favorite-container .col-12:nth-child(5n + 2) .card,
-#dc-dashboard  .col-12:nth-child(5n + 2) .card   {
-  --cycle-color: var(--solid-green-color);
-  --cycle-bg-color: var(--bg-green-color);
-  --cycle-bg-color-noalpha: var(--bg-green-color-noalpha);
+#dc-dashboard .col-12:nth-child(5n + 2) .card {
+    --cycle-color: var(--solid-green-color);
+    --cycle-bg-color: var(--bg-green-color);
+    --cycle-bg-color-noalpha: var(--bg-green-color-noalpha);
 }
 
 .nav-right a:nth-child(5n + 3):hover .nav-label,
@@ -486,8 +490,8 @@ nav {
 .footer-section li:nth-child(5n+3) a:hover,
 .social-grid .footer-social-icon:nth-child(5n + 3):hover,
 #favorite-container .col-12:nth-child(5n + 3) .card,
-#dc-dashboard  .col-12:nth-child(5n + 3) .card  {
-  --cycle-color: var(--solid-red-color);
+#dc-dashboard .col-12:nth-child(5n + 3) .card {
+    --cycle-color: var(--solid-red-color);
     --cycle-bg-color: var(--bg-red-color);
     --cycle-bg-color-noalpha: var(--bg-red-color-noalpha);
 }
@@ -498,8 +502,8 @@ nav {
 .footer-section li:nth-child(5n+4) a:hover,
 .social-grid .footer-social-icon:nth-child(5n + 4):hover,
 #favorite-container .col-12:nth-child(5n + 4) .card,
-#dc-dashboard  .col-12:nth-child(5n + 4) .card  {
-  --cycle-color: var(--solid-blue-color);
+#dc-dashboard .col-12:nth-child(5n + 4) .card {
+    --cycle-color: var(--solid-blue-color);
     --cycle-bg-color: var(--bg-blue-color);
     --cycle-bg-color-noalpha: var(--bg-blue-color-noalpha);
 }
@@ -510,8 +514,8 @@ nav {
 .footer-section li:nth-child(5n+5) a:hover,
 .social-grid .footer-social-icon:nth-child(5n + 5):hover,
 #favorite-container .col-12:nth-child(5n + 5) .card,
-#dc-dashboard  .col-12:nth-child(5n + 5) .card  {
-  --cycle-color: var(--solid-purple-color);
+#dc-dashboard .col-12:nth-child(5n + 5) .card {
+    --cycle-color: var(--solid-purple-color);
     --cycle-bg-color: var(--bg-purple-color);
     --cycle-bg-color-noalpha: var(--bg-purple-color-noalpha);
 }
@@ -829,7 +833,7 @@ nav {
     border-right: 0;
     margin-bottom: calc(var(--spacer) * 4.5);
     min-height: 328px;
-background-image: url("/img/ss-full-bg-opacity-blur.png");
+    background-image: url("/img/ss-full-bg-opacity-blur.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -912,27 +916,29 @@ background-image: url("/img/ss-full-bg-opacity-blur.png");
 
 
 @media (max-width: 992px) {
-    .ss-bottom-image-soldier, .ss-bottom-image-slime{
+
+    .ss-bottom-image-soldier,
+    .ss-bottom-image-slime {
         height: 125px;
     }
 }
 
 
 #ss-carousel {
-position: relative;
+    position: relative;
 }
 
 #ss-carousel .carousel-item {
-  max-height: 300px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-left: 4px solid var(--border-color-blue);
-  border-right: 4px solid var(--border-color-blue);
+    max-height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-left: 4px solid var(--border-color-blue);
+    border-right: 4px solid var(--border-color-blue);
 }
 
 #ss-carousel img {
-  aspect-ratio: calc(16/9);
+    aspect-ratio: calc(16/9);
 }
 
 
@@ -1251,12 +1257,11 @@ footer .container {
 
 
 
-.footer-logo-section
-{
-white-space: nowrap;
+.footer-logo-section {
+    white-space: nowrap;
 }
 
-.footer-logo-section a{
+.footer-logo-section a {
     text-decoration: none;
 }
 
@@ -1265,18 +1270,17 @@ white-space: nowrap;
     margin-right: 5px;
 }
 
-.footer-dc-logo-font{
+.footer-dc-logo-font {
     font-size: 1.75rem;
     white-space: nowrap;
     color: var(--pen-color);
 }
 
-.footer-logo-section{
+.footer-logo-section {
     font-family: "Sue Ellen Francisco", cursive;
 }
 
-.footer-section ul li
-{
+.footer-section ul li {
     list-style: none;
 }
 
@@ -1289,45 +1293,45 @@ white-space: nowrap;
     text-decoration: none;
 }
 
-.footer-section-title{
+.footer-section-title {
     font-size: 1.755rem;
     text-decoration: underline;
 }
 
 
 .footer-section a:hover {
-        text-decoration: underline;
-  text-decoration-thickness: 3px;
-  text-underline-offset: 0.2em;
+    text-decoration: underline;
+    text-decoration-thickness: 3px;
+    text-underline-offset: 0.2em;
 }
 
 
 .footer-section li a:hover {
-  text-decoration-color: var(--cycle-color);
+    text-decoration-color: var(--cycle-color);
 }
 
 .footer-social-icon {
     font-size: 1.75rem;
     color: var(--pen-color);
-    background-color: rgba(255,255,255,0.9);
+    background-color: rgba(255, 255, 255, 0.9);
 }
 
 .social-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(48px, 1fr));
-  gap: 0.5rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(48px, 1fr));
+    gap: 0.5rem;
 }
 
 /* each icon */
 .footer-social-icon {
-  aspect-ratio: 1 / 1; 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    aspect-ratio: 1 / 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-  text-decoration: none;
-  border-radius: 50%;
-  transition: border-radius 0.15s ease, color 0.15s ease;
+    text-decoration: none;
+    border-radius: 50%;
+    transition: border-radius 0.15s ease, color 0.15s ease;
 
 }
 
@@ -1336,8 +1340,8 @@ white-space: nowrap;
 }
 
 .social-grid .footer-social-icon:hover {
-  text-decoration-color: var(--cycle-color) !important;
-  color: var(--cycle-color) !important;
+    text-decoration-color: var(--cycle-color) !important;
+    color: var(--cycle-color) !important;
 }
 
 
@@ -1380,7 +1384,7 @@ white-space: nowrap;
 
 
 /*==============================================================================================*/
-.about-us-avatar{
+.about-us-avatar {
     background-image: url("/img/avatar-proud-happy-right.png");
     background-size: contain;
     background-position: center bottom;
@@ -1388,7 +1392,7 @@ white-space: nowrap;
     min-height: 200px;
 }
 
-.collaborator-photo{
+.collaborator-photo {
     height: 175px;
     width: 175px;
     border-radius: 50%;
@@ -1397,33 +1401,33 @@ white-space: nowrap;
 
 /*smaller than medium*/
 @media (max-width: 767.98px) {
-    .collaborator-photo{
-    height: 150px;
-    width: 150px;
-}
+    .collaborator-photo {
+        height: 150px;
+        width: 150px;
+    }
 }
 
-.collaborator-name{
+.collaborator-name {
     font-size: 1.5rem;
     margin-top: 10px;
     margin-bottom: 5px;
 }
 
-.collaborator-role{
+.collaborator-role {
     font-size: 1.25rem;
     color: var(--pencil-color-noalpha);
 }
 
 .custom-fa-icon {
-  width: 1em;
-  height: 1em;
-  line-height: 1;
-  vertical-align: -0.125em;
-  fill: currentColor;
-  display: inline-block;
+    width: 1em;
+    height: 1em;
+    line-height: 1;
+    vertical-align: -0.125em;
+    fill: currentColor;
+    display: inline-block;
 }
 
-.generic-plain-card{
+.generic-plain-card {
     background-color: var(--page-grid-bg-color);
     border: 3px solid var(--border-color-blue);
     border-radius: 10px;
@@ -1493,8 +1497,7 @@ white-space: nowrap;
     transform: scale(1.05);
 }
 
-.game-dashboard-tag
-{
+.game-dashboard-tag {
     padding: 2px;
     border-radius: 2px;
     background-color: lightgray;
@@ -1503,14 +1506,12 @@ white-space: nowrap;
     margin-right: 3px;
 }
 
-.game-dashboard-card
-{
+.game-dashboard-card {
     text-decoration: none;
     color: unset;
 }
 
-.game-dashboard-description
-{
+.game-dashboard-description {
     padding: 8px;
 }
 
@@ -1522,5 +1523,3 @@ white-space: nowrap;
 .dashboard-count {
     margin-left: 10px;
 }
-
-
