added new website credits

--- a/slide-soldiers/assets/css/slide-soldiers.css
+++ b/slide-soldiers/assets/css/slide-soldiers.css
@@ -855,7 +855,7 @@ background-position: right center;
     height: auto;
     margin-bottom: 30px;
     position: relative;
-    align-items: start;
+    align-items: center;
     background-color: transparent;
 }
 
